--- a/html-name/index.html
+++ b/html-name/index.html
@@ -32,6 +32,7 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
     <link
       rel="stylesheet"
       href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
@@ -51,17 +52,32 @@
       <a href="#main"><span>컨텐츠 바로가기</span></a>
       <a href="#footer"><span>풋터 바로가기</span></a>
     </div>
-    <style></style>
     <div class="wrap">
-      <header id="header">
+      <header id="header" class="container">
+       <div class="inner">
         <h1 id="logo">
           <a href="#">logo</a>
         </h1>
-        <nav id="gnb">nav</nav>
+        <div class="util">
+          <ul class="lst-util">
+            <li>
+              <!-- a : 링크 연결 / button : 동작처리 -->
+              <button class="btn-g btn-search">
+                <span class="blind">검색</span>
+              </button>
+            </li>
+            <li>
+              <button class="btn-g btn-burger">
+                <span class="blind">마이페이지</span>
+              </button>
+            </li>
+          </ul>
+        </div>
+       </div>
       </header>
       <div class="slide-wrap slide-name">slide</div>
-      <main id="main">컨텐츠</main>
-      <footer id="footer">풋터</footer>
+      <main id="main" class="container">컨텐츠</main>
+      <footer id="footer" class="container">풋터</footer>
     </div>
   </body>
 </html>
