--- a/html-name/index-header-center.html
+++ b/html-name/index-header-center.html
@@ -57,13 +57,19 @@
       <a href="#footer"><span>풋터 바로가기</span></a>
     </div>
     <div class="wrap">
+        <!-- logo 왼쪽 type -->
       <header id="header" class="container">
        <div class="inner">
         <h1 id="logo">
           <a href="#">logo</a>
         </h1>
-        <div class="head__right">
-          <div class="util">
+        <nav class="gnb-wrap">
+            <!-- 링크 연결 없이 스크립트 처리 -->
+            <a href="javascript:void(0)">
+              <span class="material-icons-outlined">menu</span>
+            </a>
+        </nav>
+        <div class="util">
             <ul class="lst-util">
             <li>
               <!-- a : 링크 연결 / button : 동작처리 -->
@@ -73,10 +79,10 @@
               </a>
             </li>
             <li>
-              <button class="btn-g btn-search">
-                <span class="material-icons-outlined"> search </span>
-                <span class="blind">검색</span>
-              </button>
+                <button class="btn-g btn-search">
+                    <span class="material-icons-outlined"> search </span>
+                    <span class="blind">검색</span>
+                  </button>
             </li>
             <li>
               <a href="#" class="btn-g btn-my">
@@ -86,21 +92,22 @@
                 <span class="blind">마이페이지</span>
               </a>
             </li>
+            
           </ul>
-          </div>
-        <nav class="gnb-wrap">
-          <input type="checkbox" name="gnbNav" id="gnbNav" class="input-burger"/>
-          <label for="gnbNav" class="label-burger">
-            <span class="blind">전체 메뉴 보기</span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-          </label>
-          <div id="gnb">navi</div>
-        </nav>
         </div>
        </div>
       </header>
+      <style>
+        #header {
+            position: relative;
+        }
+        #header #logo {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+      </style>
       <div class="slide-wrap slide-name">slide</div>
       <main id="main" class="container">컨텐츠</main>
       <footer id="footer" class="container">풋터</footer>
