--- a/html-name/index.html
+++ b/html-name/index.html
@@ -102,8 +102,140 @@
        </div>
       </header>
       <div class="slide-wrap slide-name">slide</div>
-      <main id="main" class="container">컨텐츠</main>
-      <footer id="footer" class="container">풋터</footer>
+      <main id="main">
+        <!-- 제목이 있는 그룹 -->
+        <section class="bg-gray container section-g section-news">
+          <div class="inner"></div>
+          <!-- section-news에 각자 제목 넣어 -->
+          <h2 class="sec-tit">섹션 제목</h2>
+          <div class="section-contents">섹션 컨텐츠</div>
+        </section>
+        <section class="container section-g section-shopping">
+          <h2 class="section-tit">섹션 제목</h2>
+          <div class="section-contents">
+            <ul class="lst-shopping">
+              <li>
+                <a href="#"> 
+                  <div class="thumb-shopping">
+                    <img src="https://s.pstatic.net/dthumb.phinf/?src=%22https%3A%2F%2Fs.pstatic.net%2Fshop.phinf%2F20230713_167%2F1689241635540czIx3_PNG%2Fdw.PNG%22&type=ff364_236&service=navermain" alt="shopping">
+                  </div>
+                  <div class="txt-shopping">
+                    <strong class="txt-shopping__tit">제목</strong>
+                    <p class="txt-shopping__desc">상품설명</p>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="#"> 
+                  <div class="thumb-shopping">
+                    <img src="https://s.pstatic.net/dthumb.phinf/?src=%22https%3A%2F%2Fs.pstatic.net%2Fshop.phinf%2F20230713_167%2F1689241635540czIx3_PNG%2Fdw.PNG%22&type=ff364_236&service=navermain" alt="shopping">
+                  </div>
+                  <div class="txt-shopping">
+                    <strong class="txt-shopping__tit">제목</strong>
+                    <p class="txt-shopping__desc">상품설명</p>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="#"> 
+                  <div class="thumb-shopping">
+                    <img src="https://s.pstatic.net/dthumb.phinf/?src=%22https%3A%2F%2Fs.pstatic.net%2Fshop.phinf%2F20230713_167%2F1689241635540czIx3_PNG%2Fdw.PNG%22&type=ff364_236&service=navermain" alt="shopping">
+                  </div>
+                  <div class="txt-shopping">
+                    <strong class="txt-shopping__tit">제목</strong>
+                    <p class="txt-shopping__desc">상품설명</p>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="#"> 
+                  <div class="thumb-shopping">
+                    <img src="https://s.pstatic.net/dthumb.phinf/?src=%22https%3A%2F%2Fs.pstatic.net%2Fshop.phinf%2F20230713_167%2F1689241635540czIx3_PNG%2Fdw.PNG%22&type=ff364_236&service=navermain" alt="shopping">
+                  </div>
+                  <div class="txt-shopping">
+                    <strong class="txt-shopping__tit">제목</strong>
+                    <p class="txt-shopping__desc">상품설명</p>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="#"> 
+                  <div class="thumb-shopping">
+                    <img src="https://s.pstatic.net/dthumb.phinf/?src=%22https%3A%2F%2Fs.pstatic.net%2Fshop.phinf%2F20230713_167%2F1689241635540czIx3_PNG%2Fdw.PNG%22&type=ff364_236&service=navermain" alt="shopping">
+                  </div>
+                  <div class="txt-shopping">
+                    <strong class="txt-shopping__tit">제목</strong>
+                    <p class="txt-shopping__desc">상품설명</p>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="#"> 
+                  <div class="thumb-shopping">
+                    <img src="https://s.pstatic.net/dthumb.phinf/?src=%22https%3A%2F%2Fs.pstatic.net%2Fshop.phinf%2F20230713_167%2F1689241635540czIx3_PNG%2Fdw.PNG%22&type=ff364_236&service=navermain" alt="shopping">
+                  </div>
+                  <div class="txt-shopping">
+                    <strong class="txt-shopping__tit">제목</strong>
+                    <p class="txt-shopping__desc">상품설명</p>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="#"> 
+                  <div class="thumb-shopping">
+                    <img src="https://s.pstatic.net/dthumb.phinf/?src=%22https%3A%2F%2Fs.pstatic.net%2Fshop.phinf%2F20230713_167%2F1689241635540czIx3_PNG%2Fdw.PNG%22&type=ff364_236&service=navermain" alt="shopping">
+                  </div>
+                  <div class="txt-shopping">
+                    <strong class="txt-shopping__tit">제목</strong>
+                    <p class="txt-shopping__desc">상품설명</p>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="#"> 
+                  <div class="thumb-shopping">
+                    <img src="https://s.pstatic.net/dthumb.phinf/?src=%22https%3A%2F%2Fs.pstatic.net%2Fshop.phinf%2F20230713_167%2F1689241635540czIx3_PNG%2Fdw.PNG%22&type=ff364_236&service=navermain" alt="shopping">
+                  </div>
+                  <div class="txt-shopping">
+                    <strong class="txt-shopping__tit">제목</strong>
+                    <p class="txt-shopping__desc">상품설명</p>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="#"> 
+                  <div class="thumb-shopping">
+                    <img src="https://s.pstatic.net/dthumb.phinf/?src=%22https%3A%2F%2Fs.pstatic.net%2Fshop.phinf%2F20230713_167%2F1689241635540czIx3_PNG%2Fdw.PNG%22&type=ff364_236&service=navermain" alt="shopping">
+                  </div>
+                  <div class="txt-shopping">
+                    <strong class="txt-shopping__tit">제목</strong>
+                    <p class="txt-shopping__desc">상품설명</p>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="#"> 
+                  <div class="thumb-shopping">
+                    <img src="https://s.pstatic.net/dthumb.phinf/?src=%22https%3A%2F%2Fs.pstatic.net%2Fshop.phinf%2F20230713_167%2F1689241635540czIx3_PNG%2Fdw.PNG%22&type=ff364_236&service=navermain" alt="shopping">
+                  </div>
+                  <div class="txt-shopping">
+                    <strong class="txt-shopping__tit">제목</strong>
+                    <p class="txt-shopping__desc">상품설명</p>
+                  </div>
+                </a>
+              </li>
+              
+            </ul>
+          </div>
+        </section>
+        <section class="bg-gray container section-g section-feed">
+          <h2 class="section-tit">섹션 제목</h2>
+          <div class="section-contents">섹션 컨텐츠</div>
+        </section>
+      </main>
+      <footer id="footer" class="container">
+        <div class="inner">풋터</div>
+      </footer>
     </div>
   </body>
 </html>
