--- a/html-name/index.html
+++ b/html-name/index.html
@@ -64,7 +64,7 @@
         </h1>
         <div class="head__right">
           <div class="util">
-            <ul class="lst-util">
+            <ul class="util-list">
             <li>
               <!-- a : 링크 연결 / button : 동작처리 -->
               <!-- 링크 연결 없이 스크립트 처리 -->
@@ -89,7 +89,7 @@
           </ul>
           </div>
         <nav class="gnb-wrap">
-          <input type="checkbox" name="gnbNav" id="gnbNav" class="input-burger"/>
+          <input type="checkbox" name="gnbNav" id="gnbNav" class="input-burger" />
           <label for="gnbNav" class="label-burger">
             <span class="blind">전체 메뉴 보기</span>
             <span class="bar"></span>
@@ -103,7 +103,7 @@
       </header>
       <div class="slide-wrap slide-name">slide</div>
       <main id="main">
-        <!-- 제목이 있는 그룹 -->
+        <!-- section 제목이 있는 그룹 -->
         <section class="bg-gray container section-g section-news">
           <div class="inner"></div>
           <!-- section-news에 각자 제목 넣어 -->
