--- a/html-name/index.html
+++ b/html-name/index.html
@@ -48,7 +48,8 @@
     <link rel="stylesheet" href="./dist/css/comm.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script src="./dist/js/comm.js"></script>
+    <script defer src="./dist/js/include.js"></script>
+    <script defer src="./dist/js/comm.js"></script>
   </head>
   <body>
     <div id="u-skip">
@@ -56,64 +57,65 @@
       <a href="#main"><span>컨텐츠 바로가기</span></a>
       <a href="#footer"><span>풋터 바로가기</span></a>
     </div>
+
     <div class="wrap">
-      <header id="header" class="container">
-       <div class="inner">
-        <h1 id="logo">
-          <a href="#">logo</a>
-        </h1>
-        <div class="head__right">
-          <div class="util">
-            <ul class="util-list">
-            <li>
-              <!-- a : 링크 연결 / button : 동작처리 -->
-              <!-- 링크 연결 없이 스크립트 처리 -->
-              <a href="javascript:void(0)">
-                <span class="material-icons-outlined"> language </span>
-              </a>
-            </li>
-            <li>
-              <button class="btn-g btn-search">
-                <span class="material-icons-outlined"> search </span>
-                <span class="blind">검색</span>
-              </button>
-            </li>
-            <li>
-              <a href="#" class="btn-g btn-my">
-                <span class="material-icons-outlined">
-                  account_circle
-                </span>
-                <span class="blind">마이페이지</span>
-              </a>
-            </li>
-          </ul>
-          </div>
-        <nav class="gnb-wrap">
-          <input type="checkbox" name="gnbNav" id="gnbNav" class="input-burger" />
-          <label for="gnbNav" class="label-burger">
-            <span class="blind">전체 메뉴 보기</span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-          </label>
-          <div id="gnb">navi</div>
-        </nav>
-        </div>
-       </div>
+      <header data-include-path="./outline/header.html">
       </header>
-      <div class="slide-wrap slide-name">slide</div>
+    </div>
+
+      <div class="swiper slide-g slide-intro">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img src="https://images.unsplash.com/photo-1689874099574-b2c02629348b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw0fHx8ZW58MHx8fHx8&auto=format&fit=crop&w=500&q=60" alt="">
+            <div class="swiper-slide__txt">
+              <strong>블라블라블라</strong>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              </p>
+              <a href="#">바로가기</a>
+            </div>
+
+          </div>
+          <div class="swiper-slide">Slide 2</div>
+          <div class="swiper-slide">Slide 3</div>
+        
+        </div>
+        <!-- <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div> -->
+        <div class="swiper-pagination"></div>
+      </div>
+
       <main id="main">
         <!-- section 제목이 있는 그룹 -->
-        <section class="bg-gray container section-g section-news">
+        <section class="bg-gray container section-g section-event">
           <div class="inner"></div>
           <!-- section-news에 각자 제목 넣어 -->
-          <h2 class="sec-tit">섹션 제목</h2>
-          <div class="section-contents">섹션 컨텐츠</div>
+          <h2 class="sec-tit blind">event</h2>
+          <div class="section-contents">
+            <ul class="list-event">
+              <li>
+                <img src="https://images.unsplash.com/photo-1690040158054-04a19549b43e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwzfHx8ZW58MHx8fHx8&auto=format&fit=crop&w=500&q=60" alt="event image">
+                <p>Lorem ipsum dolor sit amet.</p>
+              </li>
+              <li>
+                <img src="https://images.unsplash.com/photo-1690040158054-04a19549b43e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwzfHx8ZW58MHx8fHx8&auto=format&fit=crop&w=500&q=60" alt="event image">
+                <p>Lorem ipsum dolor sit amet.</p>
+              </li>
+              <li>
+                <img src="https://images.unsplash.com/photo-1690040158054-04a19549b43e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwzfHx8ZW58MHx8fHx8&auto=format&fit=crop&w=500&q=60" alt="event image">
+                <p>Lorem ipsum dolor sit amet.</p>
+              </li>
+              <li>
+                <img src="https://images.unsplash.com/photo-1690040158054-04a19549b43e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwzfHx8ZW58MHx8fHx8&auto=format&fit=crop&w=500&q=60" alt="event image">
+                <p>Lorem ipsum dolor sit amet.</p>
+              </li>
+            </ul>
+          </div>
         </section>
         <section class="container section-g section-shopping">
           <h2 class="section-tit">섹션 제목</h2>
           <div class="section-contents">
-            <ul class="lst-shopping">
+            <ul class="lst-thumb-two-column">
               <li>
                 <a href="#"> 
                   <div class="thumb-shopping">
@@ -233,9 +235,12 @@
           <div class="section-contents">섹션 컨텐츠</div>
         </section>
       </main>
-      <footer id="footer" class="container">
-        <div class="inner">풋터</div>
-      </footer>
+
+      <div class="wrap">
+       <footer data-include-path="./outline/footer.html">
+       </footer>
+      </div>
+
     </div>
   </body>
 </html>
